--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "reactstrap": "^6.5.0",
     "web-vitals": "^1.1.2"
   },
